--- a/user1.html
+++ b/user1.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <h2>This is a landing page for the users</h2>
 </head>
 
 <body>
