user2 added lorem ipsum

--- a/user1.html
+++ b/user1.html
@@ -9,6 +9,10 @@
   <h2>This is a landing page for the users</h2>
 </head>
 
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum laudantium earum exercitationem rerum quia
+  distinctio veniam placeat eaque nam ullam vel pariatur tempora ducimus temporibus eveniet esse fugiat, error velit!
+</p>
+
 <body>
 
 </body>
